tests/baselines/reference/tsxDeepAttributeAssignabilityError.errors.txt
tests/cases/compiler/file1.tsx(5,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/my-component.tsx (0 errors) ====
    import * as React from 'react'
    
    interface MyProps {
        x: string;
        y: MyInnerProps;
    }
    
    interface MyInnerProps {
        value: string;
    }
    
    export function MyComponent(_props: MyProps) {
        return <span>my component</span>;
    }
    
==== tests/cases/compiler/file1.tsx (1 errors) ====
    import * as React from 'react'
    import { MyComponent } from './my-component'
    
    export const result = <MyComponent x="yes" y={{
        value: 42
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tests/cases/compiler/my-component.tsx:9:5: The expected type comes from property 'value' which is declared here on type 'MyInnerProps'
    }} />;
    